@@ -88,7 +88,7 @@ public class CollectionDao {
 				throw new IllegalArgumentException("Invalid parameter for parentId");
 			}
 
-			return getCollectionsChildren(repoDao, parentId, null, false, filter, Arrays.asList(new String[]{"files"}), sortDefinition, skipCount, maxItems);
+			return getCollectionsChildren(repoDao, parentId, null, false, filter, List.of("files"), sortDefinition, skipCount, maxItems);
 		} catch (Exception e) {
 			throw DAOException.mapping(e);
 		}
@@ -129,7 +129,7 @@ public class CollectionDao {
 
 	public static CollectionBaseEntries getCollectionsSubcollections(RepositoryDao repoDao, String parentId, SearchScope scope, boolean fetchCounts, Filter filter, SortDefinition sortDefinition, int skipCount, int maxItems)	throws DAOException {
 		try {
-			return getCollectionsChildren(repoDao, parentId, scope, fetchCounts, filter, Arrays.asList(new String[]{"folders"}), sortDefinition, skipCount, maxItems);
+			return getCollectionsChildren(repoDao, parentId, scope, fetchCounts, filter, List.of("folders"), sortDefinition, skipCount, maxItems);
 		} catch (Exception e) {
 			throw DAOException.mapping(e);
 		}
